Correção nas classes DAO para rodarem no jdk 8